--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
 
-  <link rel="shortcut icon" href="{% static 'img/wanko.png' %}">
+
   <title>roomii</title>
 </head>
 
@@ -56,6 +56,9 @@
           </li>
           <li>
             <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="#">メッセージBox</a>
           </li>
           <li>
             <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
@@ -110,6 +113,19 @@
               {% endfor %}
             </ul>
           </li>
+          <li class="price">
+            <ul>
+              <a href="#">家賃</a>
+              <li><a href="#"><input type="checkbox" id="filter_kind_4" name="price" value="1">〜３万円</a></li>
+
+              <li><a href="#"><input type="checkbox" id="filter_kind_2" name="price" value="2">3万円〜5万円</a></li>
+
+              <li><a href="#"><input type="checkbox" id="filter_kind_1" name="price" value="3" >5万円〜7万円</a></li>
+
+              <li><a href="#"><input type="checkbox" id="filter_kind_3" name="price" value="4">7万円〜</a></li>
+
+            </ul>
+          </li>
           <div class='name_box'>
             <input id="sbox" id="search" name="name" type="text" placeholder="名称" />
           </div>
@@ -122,22 +138,22 @@
 
     </header>
     {% block content %}{% endblock %}
+
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+  <!-- <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  {% block extrajs %}{% endblock %}
   <link rel="stylesheet" type="text/css" href="{% static 'js/slick.css' %}"/>
-  <link rel="stylesheet" type="text/css" href="{% static 'js/fonts/slick.woff' %}"/>
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'js/fonts/slick.woff' %}"/>
   <link rel="stylesheet" type="text/css" href="{% static 'js/fonts/slick.ttf' %}"/>
-  <link rel="stylesheet" type="text/css" href="{% static 'js/ajax-loader.gif' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'js/ajax-loader.gif' %}"/> -->
   <link rel="stylesheet" type="text/css" href="{% static 'js/slick-theme.css' %}"/>
   <script type="text/javascript" src="{% static 'js/slick.min.js' %}"></script>
-
-
-
   <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 </body>
