--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -33,6 +33,9 @@
            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
          </li>
          <li>
+           <a class="nav-item nav-link" href="#">メッセージBox</a>
+         </li>
+         <li>
            <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
          </li>
          {% else %}
