--- a/templates/register/user_create.html
+++ b/templates/register/user_create.html
@@ -1,6 +1,6 @@
 {% extends "register/base.html" %}
 {% block content %}
-<div class='main create'>
+<div class='main user_create'>
   <div class='form contents'>
     <main id="profile_edit">
       <div class='logo'>
