--- a/templates/register/user_form.html
+++ b/templates/register/user_form.html
@@ -20,6 +20,7 @@
           <div class="preview">
             <img class='sample_img' src="{{user.image}}" alt="">
           </div>
+          <input type="hidden" name='user_img' value="{{user.image}}">
           <input id="imgFile" type="file" name='img_file' accept="image/png,image/jpeg,image/jpg" />
         </div>
       </div>
