--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1210,6 +1210,8 @@ a:hover {
   width: 500px;
   margin: 100px auto;
   border: 2px solid black;
+  background-color: rgba(255, 255, 255);
+  margin-top: 200px;
 }
 
 .form-group {
@@ -1233,7 +1235,9 @@ a:hover {
   width: 730px;
   height: 350px;
   border: 2px solid black;
-  margin: 100px auto;
+  margin: 200px auto;
+  background-color: rgba(255, 255, 255);
+  border-radius: 10px;
 }
 
 .remake p {
@@ -1250,9 +1254,24 @@ a:hover {
   margin-top: 30px;
 }
 
+.create_done p {
+  background-color: rgba(255, 255, 255);
+  border-radius: 10px;
+  font-size: 25px;
+  margin-top: 200px;
+  height: 300px;
+  width: 800px;
+  padding: 70px 0;
+}
+
 .commit_text_mail {
   font-size: 25px;
-  margin-top: 50px;
+  margin-top: 200px;
+  background-color: rgba(255, 255, 255);
+  border-radius: 10px;
+  width: 800px;
+  height: 300px;
+  padding: 70px 0;
 }
 
 .errorlist {
@@ -1263,10 +1282,12 @@ a:hover {
 }
 
 .remake_main {
-  margin: 100px auto;
+  margin: 200px auto;
   height: 450px;
   border: 2px solid black;
   padding-top: 30px;
+  background-color: rgba(255, 255, 255);
+  border-radius: 10px;
 }
 
 .row_login {
@@ -1668,4 +1689,15 @@ span.error {
   color: red;
   margin: 10px 0;
   display: none;
+}
+
+.main.user_create {
+  position: relative;
+  margin-bottom: 100px;
+  background-color: rgba(255, 255, 255);
+}
+
+.main.mypage {
+  background-color: rgba(255, 255, 255);
+  margin-top: 150px;
 }
